crates/macros/tests/fail/expected_str_literal.stderr
error: expected string literal
 --> tests/fail/expected_str_literal.rs:8:19
  |
8 |     #[wasm_export(unchecked_return_type = string)]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
